force-app/main/default/objects/CRM_Notes__c.object
<CustomObject>
    <description>Custom Note object to store admissions related Notes</description>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to ACP</description>
        <label>Application Course Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Application_Course_Preference__c.Applicant__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Application__c</field>
                <operation>equals</operation>
                <valueField>Application_Course_Preference__c.Application__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>CRM Notes</relationshipLabel>
        <relationshipName>CRM_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Application</description>
        <label>Application</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Application__c.Applicant__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>CRM Notes</relationshipLabel>
        <relationshipName>CRM_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Callista_Error__c</fullName>
        <description>Stores integration errors from Callista</description>
        <label>Callista Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Callista_Ref_Id__c</fullName>
        <description>Stores Callista Reference Id</description>
        <externalId>true</externalId>
        <label>Callista Ref Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Callista_Update_By__c</fullName>
        <description>Field to store Callista Update By during data migration</description>
        <label>Callista Update By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Update_On__c</fullName>
        <description>Field to store Callista Update On during data migration</description>
        <label>Callista Update On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact (Applicant)</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CRM Notes</relationshipLabel>
        <relationshipName>CRM_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>Text body of the Note</description>
        <label>Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Note

- a subset of note types from Callista relevant to assessments</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CENTRAL</fullName>
                    <label>CENTRAL ADMINISTRATION SERVICE NOTES</label>
                </value>
                <value>
                    <fullName>CREDIT</fullName>
                    <label>FROM ONLINE CREDIT APP</label>
                </value>
                <value>
                    <fullName>ESOS</fullName>
                    <label>ESOS INFORMATION</label>
                </value>
                <value>
                    <fullName>FACULTY</fullName>
                    <label>FACULTY NOTES</label>
                </value>
                <value>
                    <fullName>FEE-REFUND</fullName>
                    <label>FEE REFUND DETAILS</label>
                </value>
                <value>
                    <fullName>FEES UNIT</fullName>
                    <label>FEES UNIT, STUDENT NOTES</label>
                </value>
                <value>
                    <fullName>INTPAYMENT</fullName>
                    <label>INTERNATIONAL STUDENT OFFER ACCETANCES PAYMENT</label>
                </value>
                <value>
                    <fullName>QL-SUMMARY</fullName>
                    <label>SUMMARY OF ACADEMIC &amp; ENGLISH QUALIFICATION &amp; CREDIT GRANTED</label>
                </value>
                <value>
                    <fullName>SCHOLARSHP</fullName>
                    <label>SCHOLARSHIP</label>
                </value>
                <value>
                    <fullName>STDY-GRNT</fullName>
                    <label>STUDY GRANT</label>
                </value>
                <value>
                    <fullName>VTAC-IN-CR</fullName>
                </value>
                <value>
                    <fullName>VTAC-RMRKS</fullName>
                </value>
                <value>
                    <fullName>VTAC-IN-RM</fullName>
                </value>
                <value>
                    <fullName>GTE</fullName>
                    <label>GENUINE TEMPORARY ENTRANCE ADMISSION DETAILS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CRM Notes</label>
    <nameField>
        <label>CRM Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validate_INTPAYMENT_text_format</fullName>
        <active>true</active>
        <description>INTPAYMENT text format should always be - 

Package Deposit: $1000
OSHC: $500
OSHC Sponsored: Y/N
Tuition Sponsored: Y/N</description>
        <errorConditionFormula>AND(
  TEXT( Type__c ) = &apos;INTPAYMENT&apos;,
  NOT(
    REGEX(
      Text__c,
      &quot;^Package Deposit: \\$\\d+\\r?\\nOSHC: \\$\\d+\\r?\\nOSHC Sponsored: [YN]\\r?\\nTuition Sponsored: [YN]$&quot;
    )
  )
)
&amp;&amp; 
NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Text__c</errorDisplayField>
        <errorMessage>Please check the format of the text.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_STDYGRNT_text_format</fullName>
        <active>true</active>
        <description>ONLY record Alumni Discount or TNE discounts codes here, format as follows YYYY/1-10%AlumniDiscount or YYYY-TNE-5000X1</description>
        <errorConditionFormula>AND(
TEXT( Type__c ) = &apos;STDY-GRNT&apos;,
NOT(
REGEX(Text__c, &quot;^[0-9]{4}.*$&quot;)
)
)
&amp;&amp;
NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Text__c</errorDisplayField>
        <errorMessage>ONLY record Alumni Discount or TNE discounts codes here, format as follows YYYY/1-10%AlumniDiscount or YYYY-TNE-5000X1</errorMessage>
    </validationRules>
</CustomObject>